# hydrogen

./: .gitmodules  README.md
src/hydrogen_2dnav/: CMakeLists.txt  package.xml
src/hydrogen_2dnav/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/hydrogen_2dnav/launch/: move_base.launch
src/hydrogen_description/: CMakeLists.txt  package.xml
src/hydrogen_description/urdf/: hydrogen_base.xacro  macros.xacro
src/hydrogen_launch/: CMakeLists.txt  hydrogen.rviz  package.xml
src/hydrogen_launch/include/: alvar.launch  amcl.launch  description.launch  kobuki.launch  sensors.launch
src/hydrogen_launch/launch/: base.launch  mapping.launch  viz.launch
src/hydrogen_launch/maps/: lowell_makes_downstairs.yaml
src/hydrogen_talk/: CMakeLists.txt  package.xml
src/hydrogen_talk/src/: complain.py  hydrogen_talk.py  speech.py
src/laser_fov_filter/: CMakeLists.txt  package.xml
src/laser_fov_filter/launch/: laser_fov_filter.launch
