<?xml version="1.0"?>
<package>
  <name>hydrogen_launch</name>

  <version>0.0.1</version>
  <description>The hydrogen_launch package</description>

  <author email="powers.bradley@gmail.com">Bradley Powers</author>
  <maintainer email="powers.bradley@gmail.com">Bradley Powers</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>hydrogen_2dnav</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rviz</run_depend>

</package>
