<?xml version="1.0"?>
<package>
  <name>laser_fov_filter</name>
  <version>0.0.0</version>
  <description>The laser_fov_filter package</description>

  <maintainer email="powers.bradley@gmail.com">Bradley Powers</maintainer>
  <author email="powers.bradley@gmail.com">Bradley Powers</author>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
